--- a/src/app/wallpaper-management-form/wallpaper-management-form.component.html
+++ b/src/app/wallpaper-management-form/wallpaper-management-form.component.html
@@ -1,4 +1,41 @@
-<form [formGroup]="wallpaperForm" (ngSubmit)="onWallpaperSubmit()">
+<mat-card>
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="AppName">
+      <mat-header-cell *matHeaderCellDef> App Name </mat-header-cell>
+      <mat-cell *matCellDef="let app"> {{ app.AppName }} </mat-cell>
+    </ng-container>
+  
+    <ng-container matColumnDef="AppType">
+      <mat-header-cell *matHeaderCellDef> App Type </mat-header-cell>
+      <mat-cell *matCellDef="let app"> {{ app.AppType }} </mat-cell>
+    </ng-container>
+  
+    <ng-container matColumnDef="UploadedBy">
+      <mat-header-cell *matHeaderCellDef> Uploaded By </mat-header-cell>
+      <mat-cell *matCellDef="let app"> {{ app.UploadedBy }} </mat-cell>
+    </ng-container>
+  
+    <ng-container matColumnDef="Status">
+      <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+      <mat-cell *matCellDef="let app"> {{ app.Status }} </mat-cell>
+    </ng-container>
+  
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</mat-card>
+
+<div style="bottom:1rem ;right:1rem;position: absolute;"  >
+  <button  mat-fab color="primary" aria-label="Example icon button with a delete icon" (click) = "openDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
+
+
+
+
+
+<!-- <form [formGroup]="wallpaperForm" (ngSubmit)="onWallpaperSubmit()">
     <input type="file" formControlName="file" accept=".jpg" />
     <input type="file" formControlName="thumbnail" accept=".jpg" />
     <input type="text" formControlName="filename" placeholder="Filename" />
@@ -18,4 +55,4 @@
   
     <button type="submit" [disabled]="wallpaperForm.invalid">Submit</button>
   </form>
-  
+   -->
