--- a/src/app/management-form/management-form.component.html
+++ b/src/app/management-form/management-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="appForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="appForm" (ngSubmit)="onSubmit()">
     <input type="file" formControlName="file" accept=".apk, .ipa" />
     <input type="file" formControlName="thumbnail" accept=".jpg, .jpeg, .png" />
     <input type="text" formControlName="displayName" placeholder="Display Name" />
@@ -9,5 +9,6 @@
     <input type="text" formControlName="playstoreUrl" placeholder="Playstore URL" />
     
     <button type="submit" [disabled]="appForm.invalid">Submit</button>
-  </form>
+  </form> -->
   
+  <button (click) = "openDialog()">Open Dialog</button>  
