--- a/src/app/wallpaper-management-form/wallpaper-ingestion-form.html
+++ b/src/app/wallpaper-management-form/wallpaper-ingestion-form.html
@@ -1,20 +1,39 @@
-<form [formGroup]="wallpaperForm" (ngSubmit)="onWallpaperSubmit()">
-    <input type="file" formControlName="file" accept=".jpg" />
-    <input type="file" formControlName="thumbnail" accept=".jpg" />
-    <input type="text" formControlName="filename" placeholder="Filename" />
-    <textarea formControlName="description" placeholder="Description"></textarea>
-    <input type="text" formControlName="author" placeholder="Author" />
-  
+<form [formGroup]="wallpaperForm" (ngSubmit)="onWallpaperSubmit()" class="styled-form">
     <div class="form-row">
-        <label>Hashtags</label>
-        <mat-form-field appearance="outline">
-          <mat-label>Select Hashtags</mat-label>
-          <mat-select formControlName="hashtags" multiple>
-            <mat-option *ngFor="let hashtag of hashtagOptions" [value]="hashtag">{{ hashtag }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
+      <label for="file">Wallpaper</label>
+      <input type="file" formControlName="file" accept=".jpg" />
+    </div>
     
-  
-    <button type="submit" [disabled]="wallpaperForm.invalid">Submit</button>
+    <div class="form-row">
+      <label for="thumbnail">Thumbnail</label>
+      <input type="file" formControlName="thumbnail" accept=".jpg" />
+    </div>
+    
+    <div class="form-row">
+      <label for="filename">Filename</label>
+      <input type="text" formControlName="filename" placeholder="Filename" />
+    </div>
+    
+    <div class="form-row">
+      <label for="description">Description</label>
+      <textarea formControlName="description" placeholder="Description"></textarea>
+    </div>
+    
+    <div class="form-row">
+      <label for="author">Author</label>
+      <input type="text" formControlName="author" placeholder="Author" />
+    </div>
+    
+    <div class="form-row">
+      <label for="hashtags">Hashtags</label>
+      <mat-form-field appearance="outline">
+        <mat-label>Select Hashtags</mat-label>
+        <mat-select formControlName="hashtags" multiple>
+          <mat-option *ngFor="let hashtag of hashtagOptions" [value]="hashtag">{{ hashtag }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    
+    <button type="submit" [disabled]="wallpaperForm.invalid" class="styled-button">Submit</button>
   </form>
+  
