--- a/src/app/management-form/management-form.component.css
+++ b/src/app/management-form/management-form.component.css
@@ -49,6 +49,8 @@ select {
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-top: 15px;
+  width: 6vw;
+  height: 3vw;
 }
 
 .styled-button:disabled {
